--- a/main.css
+++ b/main.css
@@ -217,7 +217,7 @@ br {
     display: flex;
     flex-direction: column;
     position: relative;
-    margin: 20px/* top&bottom*/
+    margin: 0px/* top&bottom*/
     200px/* left&right*/
     ;
 }
@@ -300,7 +300,7 @@ br {
     opacity: 0.3;
 
     height: 0px;
-    width: 60%;
+    width: 50%;
     margin: 5%/* top&bottom*/ 10%/* left&right*/;
 
 }
@@ -372,9 +372,15 @@ br {
     align-items: left;
     flex-direction: column;
     justify-content: flex-start;
+    width: 50%;
+}
+.container-body-project-img {
+    display: flex;
+    align-items: left;
+    flex-direction: column;
+    justify-content: flex-start;
     width: 60%;
 }
-
 
 .text-about-hi {
     margin: 100px/*t&b*/
